# kbub_local

./: README.md  hanriverfile.txt  hanriverfile2.txt  myfile.txt
erp42_bringup/: CTestTestfile.cmake  Makefile  cmake_install.cmake
erp42_bringup/catkin_generated/: pkg.develspace.context.pc.py  (+1 more)
erp42_driver/: CTestTestfile.cmake  Makefile  cmake_install.cmake
erp42_msgs/: CTestTestfile.cmake  Makefile  cmake_install.cmake
erp42_navigation/: CTestTestfile.cmake  Makefile  cmake_install.cmake
erp42_teleop/: CTestTestfile.cmake  Makefile  cmake_install.cmake
hello/: package.xml
txt_saver/: CMakeLists.txt  package.xml
txt_saver/map/bak_230305_182310/: 1.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  3.txt  4.txt  5.txt  6.txt  8.txt  9.txt
txt_saver/map/bak_230305_182455/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  2.txt  21.txt  24.txt  27.txt  3.txt  31.txt  34.txt  37.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
txt_saver/map/bak_230305_182639/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
txt_saver/map/bak_230305_182819/: 1.txt  2.txt  8.txt  9.txt
txt_saver/map/bak_230305_182913/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
txt_saver/map/bak_230305_182928/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  18.txt  19.txt  21.txt  22.txt  23.txt  26.txt  3.txt  4.txt  5.txt  8.txt  9.txt
txt_saver/map/bak_230306_120412/: 1.txt
txt_saver/map/bak_230306_120436/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
txt_saver/map/bak_230306_121302/: 1.txt
txt_saver/map/bak_230315_150212/: 1.txt
txt_saver/map/bak_230315_151154/: 1.txt
txt_saver/map/bak_230315_152556/: 1.txt
txt_saver/map/bak_230315_153317/: 1.txt
txt_saver/scripts/: README.md  ebimu_driver.py  erp_commander.py  erp_driver.py  erp_dummy_state_publisher.py  erp_serial_publisher.py  imu_node.py  map_recorder.py  odometry_manager.py  sub_example.py
txt_saver/src/: txt_saver_for_kcity.py
(+77 files in other folders)
